--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,50 +8,97 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/relativeLayout">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:text="Forward"
         android:id="@+id/forward_btn"
-        android:layout_marginTop="70dp"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/forward_right_btn"
-        android:layout_toStartOf="@+id/forward_right_btn" />
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:text="forward&#10;LEFT"
+        android:layout_marginTop="104dp"
+        android:text="Up"
+        app:layout_constraintEnd_toStartOf="@+id/forward_right_btn"
+        app:layout_constraintRight_toLeftOf="@+id/forward_right_btn"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/forward_left_btn"
-        android:layout_below="@+id/forward_btn"
-        android:layout_toLeftOf="@+id/forward_btn"
-        android:layout_toStartOf="@+id/forward_btn" />
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:text="forward&#10;RIGHT"
+        android:text="Left"
+        app:layout_constraintEnd_toStartOf="@+id/forward_btn"
+        app:layout_constraintRight_toLeftOf="@+id/forward_btn"
+        app:layout_constraintTop_toBottomOf="@+id/forward_btn" />
+
+    <Button
         android:id="@+id/forward_right_btn"
-        android:layout_above="@+id/reverse_btn"
-        android:layout_toRightOf="@+id/reverse_btn"
-        android:layout_toEndOf="@+id/reverse_btn" />
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:text="REVERSE"
+        android:text="Right"
+        app:layout_constraintBottom_toTopOf="@+id/reverse_btn"
+        app:layout_constraintLeft_toRightOf="@+id/reverse_btn"
+        app:layout_constraintStart_toEndOf="@+id/reverse_btn" />
+
+    <Button
         android:id="@+id/reverse_btn"
-        android:layout_below="@+id/forward_left_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:text="Back"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forward_left_btn" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="Connect to Bluetooth Device"
         android:id="@+id/bluetooth_connect_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/beta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="132dp"
+        android:layout_marginStart="12dp"
+        android:text="Beta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/forward_btn" />
+
+    <Button
+        android:id="@+id/alpha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Alpha"
+        app:layout_constraintEnd_toStartOf="@+id/forward_btn"
+        app:layout_constraintTop_toTopOf="@+id/beta" />
+
+    <ToggleButton
+        android:id="@+id/on_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="76dp"
+        android:checked="false"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="ToggleButton"
+        android:textOn="ON"
+        android:textOff="OFF"
+        />
+
+    <TextView
+        android:id="@+id/tBox"
+        android:layout_width="372dp"
+        android:layout_height="52dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@color/gray"
+        android:gravity="center_horizontal|center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="40dp" />
+</android.support.constraint.ConstraintLayout>
