--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/forward_btn"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="96dp"
         android:text="Up"
         app:layout_constraintEnd_toStartOf="@+id/forward_right_btn"
         app:layout_constraintRight_toLeftOf="@+id/forward_right_btn"
@@ -61,8 +61,8 @@
         android:id="@+id/beta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="132dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginBottom="136dp"
+        android:layout_marginStart="28dp"
         android:text="Beta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/forward_btn" />
@@ -71,34 +71,75 @@
         android:id="@+id/alpha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="44dp"
+        android:layout_marginStart="24dp"
         android:text="Alpha"
         app:layout_constraintEnd_toStartOf="@+id/forward_btn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/beta" />
 
     <ToggleButton
         android:id="@+id/on_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="136dp"
         android:checked="false"
+        android:text="ToggleButton"
+        android:textOff="OFF"
+        android:textOn="ON"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="ToggleButton"
-        android:textOn="ON"
-        android:textOff="OFF"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/tBox1"
+        android:layout_width="360dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/red"
+        android:gravity="center_horizontal|center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tBox" />
 
     <TextView
         android:id="@+id/tBox"
-        android:layout_width="372dp"
-        android:layout_height="52dp"
+        android:layout_width="360dp"
+        android:layout_height="35dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:background="@color/gray"
         android:gravity="center_horizontal|center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="40dp" />
+        tools:layout_editor_absoluteY="0dp" />
+
+    <SeekBar
+        android:id="@+id/scroll"
+        android:layout_width="345dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/bluetooth_connect_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/scrollText"
+        android:layout_width="113dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="0"
+        app:layout_constraintBottom_toTopOf="@+id/scroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/on_switch" />
 </android.support.constraint.ConstraintLayout>
